--- a/DataAccess/App.Config
+++ b/DataAccess/App.Config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="lppaDbContext" connectionString="metadata=res://*/ProductEntityModel.csdl|res://*/ProductEntityModel.ssdl|res://*/ProductEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=lppa_tp_grupal;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="lppaDbContext" connectionString="metadata=res://*/ProductEntityModel.csdl|res://*/ProductEntityModel.ssdl|res://*/ProductEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=edu-spark-art;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
