refactor singleton, add names to product form

--- a/ComprasOnline/Web.config
+++ b/ComprasOnline/Web.config
@@ -14,6 +14,9 @@
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
+  <connectionStrings>
+    <add name="lppaDbContext" connectionString="metadata=res://*/ProductEntityModel.csdl|res://*/ProductEntityModel.ssdl|res://*/ProductEntityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=edu-spark-art;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
