--- a/ComprasOnline/ComprasOnline.csproj
+++ b/ComprasOnline/ComprasOnline.csproj
@@ -245,6 +245,7 @@
     <Content Include="Views\Product\Index.cshtml" />
     <Content Include="Views\Product\Create.cshtml" />
     <Content Include="Views\Home\Example.cshtml" />
+    <Content Include="Views\Product\Modify.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
