.- Link Home with data layer
.- Set Content Images
.- Set config file to connect with somee db.
.- Changes over layout (new user & admin linkers)

--- a/ComprasOnline/Web.config
+++ b/ComprasOnline/Web.config
@@ -11,7 +11,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DBEntities" connectionString="metadata=res://*/ModelDB.csdl|res://*/ModelDB.ssdl|res://*/ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=edu-spark-art;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DBEntities" connectionString="metadata=res://*/ModelDB.csdl|res://*/ModelDB.ssdl|res://*/ModelDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;workstation id=ArtMarket.mssql.somee.com;packet size=4096;data source=ArtMarket.mssql.somee.com;initial catalog=ArtMarket;user id=ArtMarketSa;pwd=e32zoyj36y;persist security info=False;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
