--- a/ComprasOnline/ComprasOnline.csproj
+++ b/ComprasOnline/ComprasOnline.csproj
@@ -211,6 +211,8 @@
     <Content Include="Content\Images\Elipse 3.png" />
     <Content Include="Content\Images\evenlope.icon.png" />
     <Content Include="Content\Images\left.icon.png" />
+    <Content Include="Content\Images\Products\onofrio-pacenza-chascomus.jpg" />
+    <Content Include="Content\Images\Products\onofrio-pacenza-PORTUARIA.png" />
     <Content Include="Content\Images\right.icon.png" />
     <Content Include="Content\Images\user.icon.png" />
     <Content Include="favicon.ico" />
@@ -246,6 +248,7 @@
     <Content Include="Views\Product\Create.cshtml" />
     <Content Include="Views\Home\Example.cshtml" />
     <Content Include="Views\Product\Modify.cshtml" />
+    <Content Include="Views\Product\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
