.- new screen to handle CartItems
.- new Entities Cart, CartItem, Artist
.- Refactor over login page
.- Filter Admin tabs based on role type

--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IUserManagement.cs" />
+    <Compile Include="CartManagement.cs" />
+    <Compile Include="Contracts\ICartManagement.cs" />
+    <Compile Include="UserManagement.cs" />
     <Compile Include="ProductManagement.cs" />
     <Compile Include="Contracts\IProductManagement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
