--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -42,8 +42,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Artist.cs" />
+    <Compile Include="Entities\CartItem.cs" />
+    <Compile Include="Entities\Cart.cs" />
     <Compile Include="Entities\IdentityBase.cs" />
     <Compile Include="Entities\Product.cs" />
+    <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
