--- a/ArtMarket/ArtMarket.csproj
+++ b/ArtMarket/ArtMarket.csproj
@@ -256,10 +256,11 @@
     <Content Include="Views\Product\Modify.cshtml" />
     <Content Include="Views\Product\Search.cshtml" />
     <Content Include="Views\Cart\Index.cshtml" />
+    <Content Include="Views\Order\Index.cshtml" />
+    <Content Include="Views\Order\Checkout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Order\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
