--- a/BusinessLogic/BusinessLogic.csproj
+++ b/BusinessLogic/BusinessLogic.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArtistManagement.cs" />
+    <Compile Include="Contracts\IArtistManagement.cs" />
     <Compile Include="Contracts\IErrorManagement.cs" />
     <Compile Include="Contracts\IOrderManagement.cs" />
     <Compile Include="Contracts\IUserManagement.cs" />
